Trying to see if everything works based on changes

--- a/Pilot run for CTOS Digital Footprint (1).ipynb
+++ b/Pilot run for CTOS Digital Footprint (1).ipynb
@@ -29,9 +29,6 @@
     "import math\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from scipy.stats import ttest_ind\n",
-    "import pandas as pd\n",
-    "from scipy.stats import ks_2samp\n",
     "\n",
     "import locale\n",
     "locale.setlocale(locale.LC_ALL, 'en_US.UTF-8')\n",
@@ -292,40 +289,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f1273f27",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       ".data.phone.basic.active  .data.phone.basic.originalCarrier\n",
-       "YES                       CELCOM AXIATA BERHAD                 99\n",
-       "                          DIGI TELECOMMUNICATIONS SDN BHD      95\n",
-       "                          MAXIS BROADBAND SDN BHD              95\n",
-       "NO                        MAXIS BROADBAND SDN BHD              85\n",
-       "YES                       U MOBILE SDN BHD                     44\n",
-       "NO                        DIGI TELECOMMUNICATIONS SDN BHD      26\n",
-       "                          WEBE DIGITAL SDN BHD (TM)             5\n",
-       "YES                       RED ONE NETWORK SDN BHD               4\n",
-       "                          TUNE TALK SDN BHD                     4\n",
-       "                          XOX COM SDN BHD                       4\n",
-       "NO                        U MOBILE SDN BHD                      2\n",
-       "YES                       WEBE DIGITAL SDN BHD (TM)             1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_df[['.data.phone.basic.active','.data.phone.basic.originalCarrier']].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "2632b266",
    "metadata": {},
@@ -427,7 +390,7 @@
     }
    ],
    "source": [
-    "combined_df['phone_active'] = (combined_df['.data.phone.basic.active']=='YES').astype(float)\n",
+    "combined_df['phone_active'] = (combined_df['.data.phone.basic.active']=='YES').astype(int)\n",
     "combined_df.groupby(['.data.phone.basic.originalCarrier']).agg({'phone_active':'mean','APPLICATION_CODE':'count'}).reset_index().sort_values(by='APPLICATION_CODE', ascending=False)"
    ]
   },
